--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="past2">
        
         <h1 class="hh"   >  <span class="spn" >pizza </span> of the month </h1>
-        <h1 class="hhh" >The big  <span class="spn1" >BRID</span></h1>
+        <h1 class="hhh" >The big  <span class="spn1" >bRID</span></h1>
         <img src="./4.png" alt=""   >
       <div class="ong" style="margin-top: -730px;margin-left: 100px;" >
         <li class="li10" > Pizza</li>
